--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1350,6 +1350,17 @@ As almost 1/2 of all violations are caused by \emph{complex constraints},
 data quality can be significantly improved when \emph{complex constraints} can also be expressed more easily, concisely, and intuitively.
 Therefore, existing constraint languages have to be extended or new constraint languages have to be developed.
 
+63\% of all violations are caused by \emph{warning constraints} which are only 10\% of all constraints. 
+Only 6\% of the violations are caused by \emph{error constraints} which are 49\% of all constraints.
+
+\begin{hyp}
+In general, data quality is high (according to severity levels) since only 6\% of the violations are caused by error constraints which are 49\% of all defined constraints.
+\end{hyp} 
+
+\begin{hyp}
+The percentage of severe violations is very low (6\%), compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
+\end{hyp} 
+
 \begin{table}[H]
 		\scriptsize
     \begin{center}
@@ -1385,24 +1396,15 @@ Therefore, existing constraint languages have to be extended or new constraint l
     \end{center}
 \end{table}
 
-63\% of all constraint violations are caused by warning constraints which are only 10\% of all constraints. 
-Only 6\% of the constraint violations are caused by error constraints which are 49\% of all constraints.
-
-\begin{hyp}
-Data quality is good since only 6\% of the constraint violations are caused by error constraints which are 49\% of all constraints.
-The percentage of severe constraint violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
-\end{hyp} 
-
 80\% of the \emph{QB} constraints are error constraints.
 More than 50\% of the \emph{Disco} and \emph{SKOS} constraints, however, are informational constraints.
-For Disco, 1/6 of the constraint violations are caused by error constraints.
-Almost all constraint violations raised by \emph{QB} constraints and 59\% of the constraint violations caused by \emph{SKOS} constraints are warnings.  
+1/6 of the Disco violations are caused by error constraints.
+Almost all \emph{QB} violations and 59\% of the \emph{SKOS} violations are caused by warning constraints.  
 \begin{hyp}
-In general, data quality is very high.
-The quality of data represented by established vocabularies is good,
-as serious constraint violations rarely appear.
-The quality of data represented by newly developed vocabularies, however, is worse,
-as serious constraint violations occur partially.
+For established vocabularies, the data quality is high,
+as serious violations rarely appear.
+For newly developed vocabularies, data quality is worse,
+as serious violations occur partially.
 \end{hyp} 
 
 \begin{hyp}
