--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1197,14 +1197,14 @@ In close collaboration with several \emph{SBE} domain experts, we defined 246 co
 of 53 different types on six vocabularies (\emph{Disco}, \emph{QB}, \emph{SKOS}, \emph{PHDD}, \emph{DCAT}, \emph{XKOS}) and classified them according to the complexity level of their type and their severity level. 
 For 114 of these constraints, we evaluated the data quality of 15,694 data sets (4,26 billion triples) of \emph{SBE} research data on three common vocabularies in \emph{SBE} sciences (\emph{Disco}, \emph{QB}, \emph{SKOS}) obtained from 33 SPARQL endpoints.
 We distinct two classes of vocabularies: 
-(1) established vocabularies (e.g., \emph{QB}, \emph{SKOS}) which are widely adopted and accepted and 
+(1) well-established vocabularies (e.g., \emph{QB}, \emph{SKOS}) which are widely adopted and accepted and 
 (2) newly developed vocabularies (e.g., \emph{Disco} which will be published in 2015) which are either recently published or are still in the publication process.
 %It is likely that such a vocabulary is still subject of constant change, that published data may not be consistent with its current version,
 %and that early adopters did not properly understand its formal specification.
 Based on this evaluation we formulate hypotheses.
 Nevertheless, we have to be careful making general statements for all vocabularies 
 as these hypotheses still have to be verified or falsified in terms of future work 
-by evaluating the quality of data represented by additional established and newly developed vocabularies.
+by evaluating the quality of data represented by additional well-established and newly developed vocabularies.
 
 We validated 
 9,990 / 3,775,983,610 (\emph{QB}),
@@ -1321,7 +1321,7 @@ we calculate that 46.6\% of the violations are raised by \emph{complex constrain
 Almost 1/2 of all 213 constraints and more than 50\% of the \emph{Disco} and the \emph{QB} constraints are \emph{vocabulary constraints}.
 The \emph{SKOS} constraints are equally distributed among the three disjoint sets of constraint types. 
 \begin{hyp}
-A significant amount of 46 \% of the constraints are directly extractable from formal specifications of established and newly defined vocabularies. 
+A significant amount of 46 \% of the constraints are directly extractable from formal specifications of well-established and newly defined vocabularies. 
 \end{hyp} 
 
 Nearly 1/2 of the violations are caused by \emph{complex constraints}, 1/3 by \emph{simple constraints}, and 1/5 by \emph{vocabulary constraints}.
@@ -1337,8 +1337,7 @@ almost only \emph{complex constraints} raised \emph{QB} violations, and
 nearly 80\% of the \emph{SKOS} violations are caused by \emph{simple constraints}.
 
 \begin{hyp}
-For established vocabularies, vocabulary constraints caused nearly 0\% of all violations\footnote{e.g. only 1.777 \emph{QB} violations}
-which indicates good data quality (according to formal specifications of vocabularies). 
+For well-established vocabularies, vocabulary constraints are almost completely satisfied\footnote{e.g. only 1.777 \emph{QB} violations} which indicates good data quality (according to formal specifications of vocabularies) and which demonstrates that constraint formulation in general works.
 For newly defined vocabularies, however, 2/3 of all violations are raised by vocabulary constraints
 which indicates good data quality (according to formal specifications of vocabularies).
 \end{hyp}
@@ -1407,15 +1406,11 @@ More than 50\% of the \emph{Disco} and \emph{SKOS} constraints, however, are inf
 1/6 of the Disco violations are caused by error constraints.
 Almost all \emph{QB} violations and 59\% of the \emph{SKOS} violations are caused by warning constraints.  
 \begin{hyp}
-For established vocabularies, the data quality is high,
+For well-established vocabularies, data quality is high
 as serious violations rarely appear.
-For newly developed vocabularies, data quality is worse,
+For newly developed vocabularies, data quality is worse
 as serious violations occur partially.
 \end{hyp} 
-
-\begin{hyp}
-For well-established vocabularies, the explicitly defined constraints are almost completely satisfied which demonstrates that constraint formulation in general works.
-\end{hyp}
 
 %For the vocabularies \emph{Disco}, \emph{QB}, and \emph{SKOS}, we defined 213 constraints of 53 constraint types .
 
@@ -1493,11 +1488,6 @@ For well-established vocabularies, the explicitly defined constraints are almost
 		%\label{tab:evaluation-constraint-violations}
     %\end{center}
 %\end{table}
-
-\tb{difference between 0\% and 78.6\%}
-
-\tb{it has to be ensured that constraints within a particular set are not violated randomly  
-in case there are only a few constraints within a set} 
 
 \tb{established vocabularies meet vocabulary constraints / data sets represented by established vocabularies meet vocabulary constraints which indicates good data quality}
 
