--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -249,11 +249,6 @@
 
 \begin{document}
 \renewcommand{\arraystretch}{1.3}
-%
-%
-%\title{RDF Validation of Metadata \\ on Person-Level and Aggregated Data}
-%\title{RDF Constraints to Ensure High Quality \\ of Metadata and Data Represented by any Vocabulary }
-%\title{RDF Constraints to Ensure High Quality \\ of Metadata and Data}
 \title{Aspects of RDF Data Constraints in the Social, Behavioural and Economic Sciences}
 \subtitle{}
 
@@ -280,54 +275,36 @@ Stuttgart Media University, Germany \\
 For research institutes, data libraries, and data archives,
 RDF data validation according to predefined constraints is a much sought-after feature, 
 particularly as this is taken for granted in the XML world.
-%The data most often used in research within the community around research data for the social, behavioural, and economic sciences (\emph{SBE}) is person-level data, i.e., data collected about individuals (households, businesses). 
-%%The DDI-RDF Discovery Vocabulary is used to describe and to discover this kind of research data.
-%While performing research, the detailed, often access restricted person-level
-%data is aggregated into less confidential publicly available multi-dimensional tables which answer particular research questions and whose purpose is to gain an interest in further more detailed analyses on the underlying person-level data.
-To ensure high quality and trust, both metadata and data must satisfy certain criteria - specified in terms of RDF constraints. 
-%From 2012 to 2015 together with other Linked Data community members and \emph{SBE} experts, we developed diverse vocabularies to represent \emph{SBE} metadata and data in RDF.
-
 Based on our work in the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group, we identified and published by today 82 types of constraints that are required by various stakeholders for data applications.
-
 In this paper, we formulate 246 constraints of 53 different types on six different vocabularies (Disco, QB, SKOS, PHDD, DCAT, XKOS) and classify them according to the complexity level of their type and their severity level. For 114 of these constraints, we evaluate the data quality of 15,694 data sets (4,26 billion triples) of research data for the social, behavioural, and economic (SBE) sciences obtained from 33 SPARQL endpoints. 
+Based on the results, we formulate several hypotheses to direct the further development of constraint langugaes.
 
-Based on the results, we postulate and discuss findings, like: (1) for well-established vocabularies, the explicitly defined constraints are almost completely satisfied which demonstrates that constraint formulation in general works. (2) A significant amount of 47\% of the violations refer to complex constraints that are not easily expressible in existing languages which confirms the necessity to provide suitable constraint languages.  (3) The percentage of severe constraint violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
 
-%The \textbf{contribution} of this paper is the development of a system 
-%(1) to classify RDF constraints (according to their severity levels) to evaluate the quality of (meta)data which may be represented by any vocabulary and 
-%(2) to classify RDF constraint types (according to their complexity) which in most cases correspond to RDF validation requirements.
-%By defining a huge amount of constraints of the majority of constraint types
-%to validate data sets from the community around research data for the \emph{social, behavioural, and economic (SBE) sciences},  
-%we prove the claim that the proposed classification system perfectly applies vocabulary-independent and therefore we prove its generality.
-%
-%We evaluated the (meta)data quality of large real world data sets (more than 4.2 billion triples and 15 thousand data sets) from the \emph{SBE} domain represented by multiple vocabularies to get an understanding 
-%(1) which sets of constraint types (on different levels of complexity) and 
-%(2) which sets of constraints (associated with particular severity levels) encompass the constraints causing the most/fewest constraint violations.
-
-\keywords{RDF Validation, RDF Constraints, Metadata Quality, Data Quality, Tabular Data, DDI-RDF Discovery Vocabulary, RDF Data Cube Vocabulary, SKOS, Thesauri, Linked Data, Semantic Web}
+\keywords{Constraint Validation, Data Quality, RDF}
 \end{abstract}
 
 \section{Introduction}
 
-For more than a decade, members of the \emph{SBE} community have been developing and using a
+%%% Findings aus dem Abstract
+%%% (1) for well-established vocabularies, the explicitly defined constraints are almost completely satisfied which demonstrates that constraint formulation in general works. (2) A significant amount of 47\% of the violations refer to complex constraints that are not easily expressible in existing languages which confirms the necessity to provide suitable constraint languages.  (3) The percentage of severe constraint violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
+
+The social, behavioural, and economic sciences (SBE) require high-quality data for their empirical research. For more than a decade, members of the \emph{SBE} community have been developing and using a
 metadata standard, composed of almost twelve hundred metadata fields, known as the \emph{Data Documentation Initiative (DDI)},
 an XML format to disseminate, manage,
-and reuse data collected and archived for research \cite{Vardigan2008}.  
+and reuse data collected and archived for research \cite{Vardigan2008}. 
 %DDI is heavily used by the CESSDA community of European national data archives, 
 %the International Household Survey Network community (made up of more than 90 statistical agencies),
 %and ICPSR - the largest SBE data archive in the US.
-Increasingly, data professionals, data archives, data libraries, government statisticians (e.g. \url{data.gov}, \url{data.gov.uk}), and national statistical institutes
-are very interested in having their data be discovered and used by exposing their metadata (e.g. about unemployment rates or income\ke{wieso ist das metadata? Ich würde generell auch im text bei data bleiben, es sei denn, die unterscheidung von data und metadata ist relevant.}) within the Web of Linked Data.
-As \emph{DDI} XML documents are validated against diverse XSDs\footnote{\label{fnt:DDI-XSDs}\url{http://www.ddialliance.org/Specification/}} (see section \ref{related-work}),
-the \emph{SBE} community is used to have this functionality in the XML world.
-%Recently, members of the \emph{SBE} and Linked Data community developed the \emph{DDI-RDF Discovery Vocabulary (Disco)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}}, 
-%an effort to expose \emph{DDI} metadata within the Web of Linked Data. 
-%For data archives, research institutes, and data libraries,
-%RDF data validation according to predefined constraints is a much sought-after feature, 
-%particularly as this is taken for granted in the XML world. 
-%as DDI-XML documents are validated against diverse XSDs\footnote{\label{fnt:DDI-XSDs}\url{http://www.ddialliance.org/Specification/}} (section \ref{related-work}).
-Several languages exist to formulate and check constraints on RDF data, ranging from \emph{Shape Expressions}, \emph{Resource Shapes} or \emph{Description Set Profiles} to using \emph{OWL 2} as a constraint language and the SPARQL-based \emph{SPIN}\footnote{\url{http://spinRDF.org/}}.
+
+In XML, the definition of schemas containing data constraints and the validation of data according to these constraints is commonly used to ensure a certain level of data quality.
+
+With the rise of the Web of Data, data professionals and institutions are very interested in having their data be discovered and used by publishing their data directly in RDF or at least publish accurate metadata about their data to facilitate data integration. Therefore, not only existing vocabularies like SKOS are used; 
+recently, members of the \emph{SBE} and Linked Data community developed with the \emph{DDI-RDF Discovery Vocabulary (Disco)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}} a means to expose \emph{DDI} metadata as Linked Data. 
+
+For constraint formulation and validation on RDF data, several languages exist, like \emph{Shape Expressions}, \emph{Resource Shapes} or \emph{Description Set Profiles}. \emph{OWL 2} is also used as a constraint language under a closed world assumption. With its direct support of validation via SPARQL, \emph{SPIN}%\footnote{\url{http://spinRDF.org/}}
+is very popular and certainly plays an important role for future developments in this field.
 %that more or less explicitly address the \emph{SBE} community.
+
 In 2013, the W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
 where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and RDF data validation.
 In 2014, two working groups on RDF validation have been established to develop a language to express constraints on RDF data: 
