--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -473,10 +473,10 @@ issues that go beyond the integrity constraints defined in the SKOS specificatio
 %\label{running-example}
 \section{Common Vocabularies in SBE Sciences}
 \label{rdf-representation}
-\tb{jeweils ein satz zu DCAT und XKOS}
+\tb{Ich habe XKOS und DCAT noch ganz am Ende eingeführt (jeweils nur 1 Satz)}
 %In this section, we describe how data in rectangular format (\emph{PHDD}) and metadata on person-level data sets (\emph{Disco}), aggregated data sets (\emph{QB}), thesauri (\emph{SKOS}), and statistical classifications (\emph{XKOS}) are represented in RDF\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}} and how therefore reused vocabularies are interrelated.
 
-For our evaluation, we examined four different vocabularies commonly used in or developed for the SBE sciences which are briefly introduced in the following. For three of them, we analysed actual data according to constraint violations. For PHDD, there is not yet enough data available so we limit our examination to the vocabulary itself.\ke{Neuer Absatz von mir...}
+For our evaluation, we examined six different vocabularies commonly used in or developed for the SBE sciences which are briefly introduced in the following. For three of them, we analysed actual data according to constraint violations. For PHDD, there is not yet enough data available so we limit our examination to the vocabulary itself.
 
 %\textbf{Metadata on Aggregated Data.}
 The \emph{RDF Data Cube Vocabulary (QB)}\footnote{http://www.w3.org/TR/vocab-data-cube/} is a W3C recommendation for representing metadata on \emph{data cubes}, i.e. multi-dimensional aggregated data, in RDF \cite{Cyganiak2010}. 
@@ -540,11 +540,13 @@ A variable may be associated with a theoretical concept (\emph{skos:Concept}).
 The variable \emph{Education at pre-school} is assigned to the theoretical concept \emph{Child Care} which is the narrower concept of \emph{Education} - one of the top concepts of the series \emph{EU-SILC}.
 Controlled vocabularies (\emph{skos:ConceptScheme}), serving as extension and reuse mechanism,
 organize types (\emph{skos:Concept}) of descriptive statistics (\emph{disco:SummaryStatistics}) like minimum, maximum, and arithmetic mean.
-%\emph{XKOS}\footnote{\url{https://github.com/linked-statistics/xkos}} is a SKOS extension to describe formal statistical classifications like the International Standard Classification of Occupations (\emph{ISCO}). 
-%and the Statistical Classification of Economic Activities in the European Community \emph{NACE}.
+\emph{XKOS}\footnote{\url{https://github.com/linked-statistics/xkos}} is a SKOS extension to describe formal statistical classifications like the International Standard Classification of Occupations (\emph{ISCO}). 
+and the Statistical Classification of Economic Activities in the European Community \emph{NACE}.
+\emph{DCAT} enables to represent data sets inside of data collections like portals, repositories, catalogs, and archives
+which serve as typical entry points when searching for data.
 
 %\textbf{Searching for (Meta)data.}
-%\emph{DCAT} enables to represent aggregated and person-level data sets inside of data collections like portals, repositories, catalogs, and archives
+%\emph{DCAT} enables to represent data sets inside of data collections like portals, repositories, catalogs, and archives
 %which serve as typical entry points when searching for data.
 %Users search for aggregated and person-level data records (\emph{dcat:CatalogRecord}) inside data catalogs (\emph{dcat:Catalog}). 
 %As search differs depending on the users’ information need,
@@ -1195,7 +1197,6 @@ A SPIN construct template creates constraint violation triples if all triple pat
 %in order to get an overview how many constraint types in relation to the total amount of constraint types are extractable from vocabularies ($\mathcal{CT}_{B}$), are easily definable ($\mathcal{CT}_{S}$), and are rather difficult to specify ($\mathcal{CT}_{C}$). 
 In close collaboration with several \emph{SBE} domain experts, we defined 246 constraint 
 of 53 different types on six vocabularies (\emph{Disco}, \emph{QB}, \emph{SKOS}, \emph{PHDD}, \emph{DCAT}, \emph{XKOS}) and classified them according to the complexity level of their type and their severity level. 
-\ke{Alle vokabulare in section "vocabularies" eingeführt?}\tb{mache ich}
 For 114 of these constraints, we evaluated the data quality of 15,694 data sets (4,26 billion triples) of \emph{SBE} research data on three common vocabularies in \emph{SBE} sciences (\emph{Disco}, \emph{QB}, \emph{SKOS}) obtained from 33 SPARQL endpoints.
 We distinct two classes of vocabularies: 
 (1) well-established vocabularies (e.g., \emph{QB}, \emph{SKOS}) which are widely adopted and accepted and 
