--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1286,9 +1286,11 @@ we only use normalized relative values representing the percentage of constraint
     \end{center}
 \end{table}
 
-Based on the results, we formulate several hypotheses to direct the further development of constraint languages.
-Nevertheless, we have to be careful making general statements for all vocabularies 
-as these hypotheses still have to be verified or falsified in terms of future work 
+Based on the evaluation results on three vocabularies, 
+we cannot make valid general statements for all vocabularies,
+but we can formulate several hypotheses to direct the further development of constraint languages.
+As these hypotheses cannot be proved yet, 
+they still have to be verified or falsified in terms of future work 
 by evaluating the quality of data represented by additional well-established and newly developed vocabularies.
 
 %More than the half of them are $\mathcal{CT}_{B}$, nearly a third $\mathcal{CT}_{S}$, and only a sixth $\mathcal{CT}_{C}$ constraint types.
@@ -1296,9 +1298,9 @@ by evaluating the quality of data represented by additional well-established and
 %(for \emph{QB} even three quarters).
 %\emph{Existential quantifications} (\emph{R-86}, 32.4\%, \emph{Disco}), \emph{data model consistency} (31.4\%, \emph{QB}), and \emph{structure} (28.6\%, \emph{SKOS}) are the constraint types the most constraints are instantiated from.
 
-\tb{Ich würde zu Beginn der Auswertung, nach den Tabellen, erklären, dass wir anhand der drei Vokabulare keine gesicherten allgemeinen Aussagen  machen können, aber dass wir im folgenden verschiedene Hypthesen aufstellen, die auf die Auswertung gestützt sind. / ann also erst die Fakten berichten, wie zum Beispiel bestimmte Prozentwerte / Und dann die Hypothese als Schluss, z..B. dass die Datenqualität bezüglich in den etablierten Vokabularen hinterlegter Constraints sehr gut ist, was darauf hindeutet, dass das hinterlegen von constraints sinnvoll ist und von den datenanbietern auch beachtet wird.
+\tb{ann also erst die Fakten berichten, wie zum Beispiel bestimmte Prozentwerte / Und dann die Hypothese als Schluss, z..B. dass die Datenqualität bezüglich in den etablierten Vokabularen hinterlegter Constraints sehr gut ist, was darauf hindeutet, dass das hinterlegen von constraints sinnvoll ist und von den datenanbietern auch beachtet wird.
 ganz eigentlich ist ja sogar nur das zweite unsere hypothese
-die datenqualität in unserem sample IST gut, das ist auch keine hypothese / es muss halt klar werden, dass wir die hypothese im anschluss nicht beweisen, sondern dass wir sie lediglich postulieren, allerdings nicht komplett aus der luft sondern als interpretation unserer ergebnisse / Was zwar kein beweis ist wegen geringer zahl der vokabulare, aber eben auch nicht nix}
+die datenqualität in unserem sample IST gut, das ist auch keine hypothese}
 
 Almost 1/2 of all 213 constraints and more than 50\% of the \emph{Disco} and the \emph{QB} constraints are \emph{vocabulary constraints}.
 The \emph{SKOS} constraints are equally distributed among the three disjoint sets of constraint types. 
